# rust_transformer

./: .gitignore  Cargo.toml  MW12_D49_E1_H3_Hi400_LR0.001  MW12_D50_E2_H3_Hi400_LR0.001  README.md  TMW12_D50_E2_H3_Hi400_LR0.001
src/: add_and_norm.rs  attention.rs  block.rs  dataset.rs  dense.rs  embedding.rs  encoder.rs  encoder_block.rs  lib.rs  logger.rs  main.rs  mean_pooling.rs  multi_headed_attention.rs  positional_encoder.rs  run.rs  self_attention.rs  transformer.rs
