[package]
name = "transformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "transformer"
path = "src/lib.rs"

[[bin]]
name = "transformer"
path = "src/main.rs"

[dependencies]
rand_distr = "0.4.3"
rand = "0.8.5"