[package]
name = "transformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "transformer"
path = "src/lib.rs"

[[bin]]
name = "transformer"
path = "src/main.rs"

[dependencies]
rand_distr = "0.4.3"
rand = "0.8.5"
serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0"
log = "0.4"
chrono = "0.4"
ndarray = "0.15.0"